--- a/Frontend/src/app/components/template/nav/nav.component.html
+++ b/Frontend/src/app/components/template/nav/nav.component.html
@@ -15,7 +15,7 @@
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="content">
-        <app-product-elle></app-product-elle>
+        <app-product-crud></app-product-crud>
         <router-outlet> </router-outlet>
     </mat-sidenav-content>
 </mat-sidenav-container>
